[gd_scene load_steps=23 format=3 uid="uid://dhwmeeb6ra8u1"]

[ext_resource type="Script" path="res://scripts/behaviours/health_system.gd" id="1_bqohm"]
[ext_resource type="Script" path="res://scripts/enemy/enemy_controller.gd" id="1_fy4e7"]
[ext_resource type="PackedScene" uid="uid://c7bndd8k25j3h" path="res://objects/skull.tscn" id="2_veknp"]
[ext_resource type="Script" path="res://context_map.gd" id="2_xjxuq"]
[ext_resource type="Script" path="res://scripts/enemy/FSM/state_machine.gd" id="3_j7a2w"]
[ext_resource type="Script" path="res://scripts/enemy/FSM/state_follow.gd" id="4_thjv6"]
[ext_resource type="Script" path="res://scripts/enemy/EnemyMovement.gd" id="6_fqbrd"]
[ext_resource type="Script" path="res://scripts/enemy/FSM/state_attack.gd" id="6_ps0ni"]
[ext_resource type="Script" path="res://scripts/behaviours/drop_after_die.gd" id="8_g14gq"]
[ext_resource type="PackedScene" uid="uid://b2fqwbvgwwm04" path="res://objects/itens/xp_small.tscn" id="9_fbdp8"]
[ext_resource type="PackedScene" uid="uid://bv5dhxbuoad4q" path="res://objects/itens/meat.tscn" id="10_765bk"]
[ext_resource type="Texture2D" uid="uid://idqd78fw001m" path="res://addon/Tiny Swords/Factions/Goblins/Troops/Torch/Yellow/Torch_Yellow.png" id="11_p8fs1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vveei"]
radius = 112.071

[sub_resource type="CircleShape2D" id="CircleShape2D_ef65y"]
radius = 111.072

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6nqar"]
radius = 18.0
height = 46.0

[sub_resource type="Animation" id="Animation_6s2jg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_dwq1b"]
resource_name = "attack_side"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StateMachine/AttackState")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_hit"
}]
}

[sub_resource type="Animation" id="Animation_000oj"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0)]
}

[sub_resource type="Animation" id="Animation_ojivo"]
resource_name = "run"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}

[sub_resource type="Animation" id="Animation_ie3t4"]
resource_name = "attack_down"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StateMachine/AttackState")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_hit"
}]
}

[sub_resource type="Animation" id="Animation_tlcgf"]
resource_name = "attack_up"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StateMachine/AttackState")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_hit"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fcds1"]
_data = {
"RESET": SubResource("Animation_6s2jg"),
"attack_down": SubResource("Animation_ie3t4"),
"attack_side": SubResource("Animation_dwq1b"),
"attack_up": SubResource("Animation_tlcgf"),
"idle": SubResource("Animation_000oj"),
"run": SubResource("Animation_ojivo")
}

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
script = ExtResource("1_bqohm")
max_health = 4.0
death_prefab = ExtResource("2_veknp")

[node name="EnemyController" type="Node2D" parent="."]
script = ExtResource("1_fy4e7")
direction = Array[Vector2]([Vector2(0, -1), Vector2(1, -1), Vector2(1, 0), Vector2(1, 1), Vector2(0, 1), Vector2(-1, 1), Vector2(-1, 0), Vector2(-1, -1)])

[node name="ContextMap" type="Marker2D" parent="."]
script = ExtResource("2_xjxuq")

[node name="up" type="RayCast2D" parent="ContextMap"]
unique_name_in_owner = true
target_position = Vector2(0, -75)

[node name="up_right" type="RayCast2D" parent="ContextMap"]
unique_name_in_owner = true
target_position = Vector2(45, -45)

[node name="right" type="RayCast2D" parent="ContextMap"]
unique_name_in_owner = true
target_position = Vector2(75, 0)

[node name="down_right" type="RayCast2D" parent="ContextMap"]
unique_name_in_owner = true
target_position = Vector2(45, 45)

[node name="down" type="RayCast2D" parent="ContextMap"]
unique_name_in_owner = true
target_position = Vector2(0, 75)

[node name="down_left" type="RayCast2D" parent="ContextMap"]
unique_name_in_owner = true
target_position = Vector2(-45, 45)

[node name="left" type="RayCast2D" parent="ContextMap"]
unique_name_in_owner = true
target_position = Vector2(-100, 0)

[node name="up_left" type="RayCast2D" parent="ContextMap"]
unique_name_in_owner = true
target_position = Vector2(-60, -60)

[node name="StateMachine" type="Marker2D" parent="."]
script = ExtResource("3_j7a2w")

[node name="FollowState" type="Marker2D" parent="StateMachine"]
script = ExtResource("4_thjv6")

[node name="Area2D" type="Area2D" parent="StateMachine/FollowState"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StateMachine/FollowState/Area2D"]
shape = SubResource("CircleShape2D_vveei")

[node name="AttackState" type="Marker2D" parent="StateMachine"]
script = ExtResource("6_ps0ni")

[node name="Area2D" type="Area2D" parent="StateMachine/AttackState"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StateMachine/AttackState/Area2D"]
visible = false
shape = SubResource("CircleShape2D_ef65y")
debug_color = Color(0.995607, 0, 0.202234, 0.42)

[node name="EnemyMovement" type="Node" parent="."]
script = ExtResource("6_fqbrd")
speed = 2.0

[node name="DropSystem" type="Node" parent="."]
script = ExtResource("8_g14gq")
xp_drop = ExtResource("9_fbdp8")
drop = ExtResource("10_765bk")
drop_rate = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_6nqar")
debug_color = Color(0, 0.644818, 0.274561, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -27)
texture = ExtResource("11_p8fs1")
hframes = 7
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fcds1")
}
autoplay = "run"
